[gd_scene load_steps=4 format=3 uid="uid://dcqhx0askgd7k"]

[ext_resource type="Script" path="res://main_scene/scripts/h_box_container.gd" id="1_262wm"]
[ext_resource type="Texture2D" uid="uid://doq7lhtgmkji4" path="res://assets/ui/viewnav.png" id="1_l5uwk"]
[ext_resource type="Texture2D" uid="uid://dh4t3lgt3866" path="res://assets/ui/viewnav_pressed.png" id="2_o0tbf"]

[node name="Navigation" type="Control"]
layout_mode = 3
anchors_preset = 0
mouse_filter = 1
script = ExtResource("1_262wm")

[node name="Viewnav_Left" type="TextureButton" parent="."]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
offset_right = 150.0
offset_bottom = 150.0
size_flags_vertical = 4
texture_normal = ExtResource("1_l5uwk")
texture_hover = ExtResource("2_o0tbf")
stretch_mode = 0

[node name="Viewnav_Right" type="TextureButton" parent="."]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
offset_right = 150.0
offset_bottom = 150.0
size_flags_horizontal = 10
size_flags_vertical = 4
texture_normal = ExtResource("1_l5uwk")
texture_hover = ExtResource("2_o0tbf")
stretch_mode = 0
flip_h = true

[connection signal="pressed" from="Viewnav_Left" to="." method="_on_viewnav_left_button_down"]
[connection signal="pressed" from="Viewnav_Right" to="." method="_on_viewnav_right_button_down"]
